javafx.bat 수정 및각각의  bin 디렉토리에 json 추가